--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ a {
     margin: 0rem 0.4rem;
     font-size: 0.8em;
     font-family: 'Courier New', monospace;
+    text-align: justify;
 }
 
 #accept-cookies {
@@ -66,6 +67,7 @@ a {
     padding: 10px 20px; 
     cursor: pointer;
 }
+
 #accept-cookies:hover {
     background-color: #ffffff;
     color: #000000; 
@@ -97,6 +99,15 @@ a {
         height: 12vh;
         font-size: 1.5em;
         padding: 0.7rem;
+    }
+
+    #cookie-banner {
+        padding: 0.6rem;
+        flex-direction: column;
+    }
+    
+    #cookie-banner-text {
+        margin: 0rem 0.2rem 0.4rem 0rem;
     }
 }
 
